--- a/Cinemas2001/Cinemas2001/Modelo/Cinemas2001Entities.tt
+++ b/Cinemas2001/Cinemas2001/Modelo/Cinemas2001Entities.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
 
-const string inputFile = @"Cinemas2001Model.edmx";
+const string inputFile = @"Cinemas2001Entities.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
